<resources>
    <string name="app_name">S Memo</string>
    <string name="smemo">SMemo</string>
    <string name="nomemo">No S Memo</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="back">Back</string>
    <string name="recognized_text">Text recognized</string>
    <string name="cancel">Cancel</string>
    <string name="map_cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="saved">Saved</string>
    <string name="deleted">Deleted</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="move">Move</string>
    <string name="move_here">Move here</string>
    <string name="text_first">Text</string>
    <string name="contact_icon">Contact icon</string>
    <string name="homescreen">Home screen wallpaper</string>
    <string name="lockscreen">Lock screen wallpaper</string>
    <string name="widget">Widget</string>
    <string name="set_as_widget">Set as widget</string>
    <string name="loading">Loading...</string>
    <string name="please_wait">Please wait</string>
    <string name="chooser">Select an action</string>
    <string name="share">Share</string>
    <string name="s_planner">S Planner</string>
    <string name="failed">Failed</string>
    <string name="enter_title">Enter title</string>
    <string name="recognize_failed">Failed to recognize. You need to select language. Continue?</string>
    <string name="select_language">Select language</string>
    <string name="recording_failed">Can not recording</string>
    <string name="exceed_memory">Exceed memory.</string>
    <string name="record">Record</string>
    <string name="_continue">Continue</string>
    <string name="password_keyboard_label_symbol_key">\?123</string>
    <string name="password_keyboard_label_alpha_key">ABC</string>
    <string name="password_keyboard_label_alt_key">ALT</string>
    <string name="lockpassword_choose_your_pin_header">Select PIN</string>
    <string name="lockpassword_confirm_your_pin_header">Confirm PIN</string>
    <string name="lockpassword_confirm_pins_dont_match">PIN do not match</string>
    <string name="lockpassword_pin_too_short">PIN must contain at least %d numbers</string>
    <string name="lockpassword_pin_too_long">PIN must contain no more than %d numbers</string>
    <string name="lockpassword_pin_contains_non_digits">PIN must only contain numbers 0-9</string>
    <string name="lockpassword_press_continue">Press Continue when finished</string>
    <string name="done">Done</string>
    <string name="search_hint">Search cities</string>
    <string name="error_network_not_available">Network not available. Grey screen inserted</string>
    <string name="sync">Sync</string>
    <string name="print">Print</string>
    <string name="set_as">Set as</string>
    <string name="sync_all">Sync all</string>
    <string name="memo_num">(%d)</string>
    <string name="deleted_memo">Delete memo(%d)</string>
    <string name="select_all">Select all</string>
    <string name="this_memo_will_be_deleted">This memo will be deleted</string>
    <string name="n_memos_will_be_deleted">%d memos will be deleted</string>
    <string name="all_memos_will_be_deleted">All memos will be deleted</string>
    <string name="this_folder_will_be_deleted">This folder will be deleted</string>
    <string name="n_folders_will_be_deleted">%d folderes will be deleted</string>
    <string name="all_folders_will_be_deleted">All folders will be deleted</string>
    <string name="this_pile_will_be_deleted">This memo stack will be deleted</string>
    <string name="n_piles_will_be_deleted">%d memo stacks will be deleted</string>
    <string name="all_piles_will_be_deleted">All memo stacks will be deleted</string>
    <string name="search">Search</string>
    <string name="no_title">No title</string>
    <string name="no_tag">No tag</string>
    <string name="share_via">Share via</string>
    <string name="export">Export</string>
    <string name="to_gallery">To Gallery</string>
    <string name="gallery">Gallery</string>
    <string name="jpg">JPG</string>
    <string name="pdf">PDF</string>
    <string name="export_to_pdf">Export to PDF</string>
    <string name="export_to_gallery">Export to Gallery</string>
    <string name="create_folder">Create folder</string>
    <string name="link_to_calendar">Link to Calendar</string>
    <string name="sort_by">Sort by</string>
    <string name="date_most_recent">Date (Most recent)</string>
    <string name="date_oldest">Date (Oldest)</string>
    <string name="title">Title</string>
    <string name="tag">Tag</string>
    <string name="voice_contained">Containing voice</string>
    <string name="text_only">Text only</string>
    <string name="favourites">Favorites</string>
    <string name="view_by_list">View by list</string>
    <string name="view_by_thumbnail">View by thumbnail</string>
    <string name="edit">Edit</string>
    <string name="processing">Processing...</string>
    <string name="wait_dialog">Generating image...</string>
    <string name="share_fail">Sharing cancelled</string>
    <string name="setas_fail">SetAs cancelled</string>
    <string name="no_way_to_share">No applications to share picture</string>
    <string name="no_way_to_setas">No application available to set as the picture.</string>
    <string name="export_success">Export completed</string>
    <string name="export_fail">Export cancelled</string>
    <string name="print_fail">Failed to print</string>
    <string name="lock_success">Locked</string>
    <string name="unlock_success">Unlocked</string>
    <string name="lock_fail">Failed to lock</string>
    <string name="unlock_fail">Failed to unlock</string>
    <string name="google_docs">Google Docs</string>
    <string name="sync_msg">Sync your memos with Google Docs or transfer individual memos</string>
    <string name="google_account">Google account</string>
    <string name="last_sync">Last synced: %s</string>
    <string name="sync_now">Sync now</string>
    <string name="log_out">Log out</string>
    <string name="syncronized">Synchronised</string>
    <string name="memo_synchronization">Memo synchronisation</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="sync_folder">SAMSUNG_S MEMO</string>
    <string name="delete_message">This memo will be deleted</string>
    <string name="view_url">View URL</string>
    <string name="view">View</string>
    <string name="set_skin">Set skin</string>
    <string name="link_to_splanner">Link to S Planner</string>
    <string name="new_event">New event</string>
    <string name="new_task">New task</string>
    <string name="link">Link</string>
    <string name="S_Memo_Export">S Memo Export</string>
    <string name="add_picture">Add picture</string>
    <string name="picture">Picture</string>
    <string name="capture_picture">Take picture</string>
    <string name="stop">Stop</string>
    <string name="play">Play</string>
    <string name="from_clipboard">From clipboard</string>
    <string name="from_mini_penmemo">From S Memo lite memo</string>
    <string name="from_map">From Maps</string>
    <string name="open_url">Open URL</string>
    <string name="recognizing">Recognizing...</string>
    <string name="exceed_max_canvas_size">Maximum canvas size exceeded</string>
    <string name="clip_art_title">Select a clip art</string>
    <string name="pen_setting">Pen settings</string>
    <string name="pen_colors">Pen colors</string>
    <string name="eraser">Eraser</string>
    <string name="clear_all">Clear all</string>
    <string name="clear">Clear</string>
    <string name="insert">Insert</string>
    <string name="recognize_to_text">Handwriting-to-text</string>
    <string name="add_title">Add title</string>
    <string name="delete_title">Delete title</string>
    <string name="add_tag">Add tag</string>
    <string name="edit_tag">Edit tag</string>
    <string name="change_background">Change background</string>
    <string name="splanner">S Planner</string>
    <string name="background">Background</string>
    <string name="select">Select</string>
    <string name="idea">Idea</string>
    <string name="todo">Todo</string>
    <string name="meeting">Meeting</string>
    <string name="mission">Mission</string>
    <string name="map_src_pos">Start point</string>
    <string name="map_dest_pos">End point</string>
    <string name="map_route">Directions</string>
    <string name="map_clear">Clear map</string>
    <string name="map_capture">Capture</string>
    <string name="pinlock">PIN lock</string>
    <string name="tutorial">Tutorial</string>
    <string name="tutorial_tap_1">Double tap</string>
    <string name="tutorial_tap_2">Double tap the screen while pressing the pen button. S Memo lite will be displayed</string>
    <string name="tutorial_panning_1">Panning</string>
    <string name="tutorial_panning_2">Touching the screen with two fingers and then swiping them in opposite directions is called pinch zoom</string>
    <string name="tutorial_handwriting">Handwriting to text</string>
    <string name="tutorial_text_1">- When you have written one character, write the next one. Write each letter to the right of the previous character. Try to write the characters upright. Write the letters for one word the same size, so they are easy to recognize</string>
    <string name="tutorial_text_2">- When writing one word, do not leave too much space between characters. Also, do not leave too much space between words on the same line</string>
    <string name="tutorial_tool_bar">Tool bar</string>
    <string name="tutorial_tool_new_btn">Create S Memo</string>
    <string name="tutorial_tool_new_btn_desc">Current content will be saved and new S Memo created</string>
    <string name="tutorial_tool_text_btn">Text mode</string>
    <string name="tutorial_tool_text_btn_desc">SIP will open automatically</string>
    <string name="tutorial_tool_pen_btn">Drawing mode</string>
    <string name="tutorial_tool_pen_btn_desc">Open Pen settings. The current colour is displayed in the bottom section and on the example line shown</string>
    <string name="tutorial_tool_erase_btn">Eraser mode</string>
    <string name="tutorial_tool_erase_btn_desc">Toggle between eraser settings</string>
    <string name="tutorial_tool_redo_btn">Undo and redo</string>
    <string name="tutorial_tool_redo_btn_desc">Toggle between undo and redo</string>
    <string name="tutorial_tool_save_btn">Save</string>
    <string name="tutorial_tool_save_btn_desc">Return to list after saving current memo</string>
    <string name="tutorial_tool_cancel_btn">Cancel</string>
    <string name="tutorial_tool_cancel_btn_desc">Return to list without saving current memo</string>
    <string name="tutorial_tool_view_btn">View mode</string>
    <string name="tutorial_tool_view_btn_desc">Change to view mode after saving current memo in memo stack</string>
    <string name="tutorial_tool_add_btn">Add picture</string>
    <string name="tutorial_tool_add_btn_desc">Take photos to insert, or insert saved photos, clip art, or clipboard/map images</string>
    <string name="tutorial_tool_record_btn">Record voice</string>
    <string name="tutorial_tool_record_btn_desc">Record your voice to attach to the memo</string>
    <string name="tutorial_tool_favorite_btn">Favorites</string>
    <string name="tutorial_tool_favorite_btn_desc">Mark specific memos as important</string>
    <string name="rename">Rename</string>
    <string name="refer_guide">More</string>
    <string name="sort_type">Type</string>
    <string name="reorder">Reorder</string>
    <string name="saveas">Save as</string>
    <string name="settings">Settings</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_password">Enter new password</string>
</resources>