<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/drawable_icon_delete_ic" android:id="@id/menu_delete" android:title="@string/delete" />
    <item android:icon="@drawable/drawable_icon_search_ic" android:id="@id/menu_search" android:title="@string/search" />
    <item android:icon="@drawable/drawable_icon_sort_ic" android:id="@id/menu_sortby" android:title="@string/sort_by" />
    <item android:icon="@drawable/drawable_icon_listmode_ic" android:id="@id/menu_viewby" android:title="@string/view_by_list" />
    <item android:icon="@drawable/drawable_icon_share_ic" android:id="@id/menu_sharevia" android:title="@string/share_via" />
    <item android:icon="@drawable/drawable_icon_export_ic" android:id="@id/export" android:title="@string/export" />
    <item android:icon="@drawable/drawable_icon_sync_ic" android:id="@id/menu_sync" android:title="@string/sync" />
    <item android:icon="@drawable/drawable_icon_folder_ic" android:id="@id/menu_create_folder" android:title="@string/create_folder" />
    <item android:icon="@drawable/drawable_icon_rename_ic" android:id="@id/menu_rename" android:title="@string/rename" />
    <item android:icon="@drawable/drawable_icon_move_ic" android:id="@id/menu_move" android:title="@string/move" />
    <item android:icon="@drawable/drawable_icon_reorder_ic" android:id="@id/menu_reorder" android:title="@string/reorder" />
    <item android:icon="@drawable/drawable_icon_lock_ic" android:id="@id/menu_lock" android:title="@string/lock" />
    <item android:icon="@drawable/drawable_icon_unlock_ic" android:id="@id/menu_unlock" android:title="@string/unlock" />
    <item android:icon="@drawable/ic_menu_lock" android:id="@id/menu_pinlock" android:title="@string/pinlock" />
    <item android:icon="@drawable/drawable_icon_print_ic" android:id="@id/menu_print" android:title="@string/print" />
    <item android:icon="@drawable/drawable_icon_setting_ic" android:id="@id/settings" android:title="@string/settings" />
    <item android:icon="@drawable/drawable_icon_tutorial_ic" android:id="@id/menu_tutorial" android:title="@string/tutorial" />
</menu>
