<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="#ffbebebe" android:id="@id/new_password" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/enter_password" />
    <EditText android:textAppearance="?android:textAppearanceMedium" android:textColorHighlight="#ff33b5e5" android:textColorHint="#ff808080" android:id="@id/new_password_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:hint="@string/password" android:scrollHorizontally="true" android:singleLine="true" android:autoText="false" android:inputType="textPassword" android:imeOptions="actionNext" />
    <TextView android:textColor="#ffbebebe" android:id="@id/confirm_password" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/confirm_password" />
    <EditText android:textAppearance="?android:textAppearanceMedium" android:textColorHighlight="#ff33b5e5" android:textColorHint="#ff808080" android:id="@id/confirm_password_edit" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:hint="@string/confirm" android:scrollHorizontally="true" android:singleLine="true" android:autoText="false" android:inputType="textPassword" android:imeOptions="actionDone" />
</LinearLayout>
